Wed Apr  5 22:39:28 UTC 2006  Adam Mitz  <mitza@ociweb.com>

        * tests/Bug_2494_Regression/Bug_2494_Regression.mpc:
        * tests/Bug_2494_Regression/README:
        * tests/Bug_2494_Regression/client.cpp:
        * tests/Bug_2494_Regression/run_test.pl:
        * tests/Bug_2494_Regression/server.cpp:
        * tests/Bug_2494_Regression/test.idl:
        * tests/Bug_2494_Regression/test_i.h:
        * tests/Bug_2494_Regression/test_i.inl:
        * tests/Bug_2494_Regression/test_i.cpp:

          Added a regression test for Bugzilla bug #2494.

        * tao/Transport.cpp (~Transport):

          Added back the ACE_ASSERTS, needed for the regression test above.
          See Bugzilla bug #2494.

Tue Apr  4 22:03:35 UTC 2006  Wallace Zhang  <zhangw@ociweb.com>

        * orbsvcs/examples/ImR/Advanced/TestClient.h:
        * orbsvcs/examples/ImR/Advanced/TestClient.cpp:
        * orbsvcs/examples/ImR/Advanced/TestServer.cpp:

          Trying to fix compile error occuring on icc 9.0 build.
          Replaced std::cout with ACE_DEBUG, std::getline with
          ACE_Capabilies::getline.

Tue Apr  4 12:30:08 UTC 2006  Simon McQueen  <sm@prismtech.com>

        * orbsvcs/tests/FaultTolerance/GroupRef_Manipulation/Server_Request_Interceptor.cpp:
        * orbsvcs/tests/FaultTolerance/GroupRef_Manipulation/client.cpp:

          Fix old gcc warnings.

Tue Apr  4 09:15:16 UTC 2006  Simon McQueen  <sm@prismtech.com>

        * NEWS:

          Documented Frank's formidably fabulous forwarding fix.

Tue Apr  4 08:36:45 UTC 2006  Simon McQueen  <sm@prismtech.com>

        * tests/Permanent_Forward/StubTest.cpp:

          Fixed gcc 2.96 warnings.

Tue Apr  4 08:02:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/AnyTypeCode/NVList.cpp:
        * orbsvcs/orbsvcs/Event/EC_TPC_Dispatching.cpp:
        * orbsvcs/orbsvcs/Notify/XML_Loader.cpp:
          Fixed unitialized warnings

Mon Apr  3 18:32:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
